<resources>
    <string name="app_name">EatItServer</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="tag">We transport products to customers as quicky as our ex betrays</string>
    <string name="email">Enter your email</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="select_image">Select Image</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="discount">Diiscount</string>
    <string name="price">Price</string>
</resources>
